--- a/index.html
+++ b/index.html
@@ -88,23 +88,64 @@
         <script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
         <script>
 
+            /**
+             * Div that is considered the game area
+             * @type {HTMLElement}
+             */
             var playGround;
+            /**
+             * The height of the game area
+             * @see {@link playGround}
+             * @type {number}
+             */
             var playGroundHeight;
+            /**
+             * The background that is being scrolled horizontally for a feel
+             * of movement
+             * @type {HTMLElement}
+             */
             var background;
+            /**
+             * The left position of the background
+             * @see {@link background}
+             * @default 0
+             * @type {number}
+             */
             var backgroundLeft = 0;
-
+            /**
+             * DOM element that represents the head/flappy thing that has to
+             * get through the obstacles
+             * @type {HTMLElement}
+             */
             var flappyGuyElement;
+            /**
+             * Top position of the head
+             * @see {@link flappyGuyElement}
+             * @type {number}
+             */
             var flappyGuyTopPos;
-
+            /**
+             * Maximum top value {@link flappyGuyElement} can take
+             * @see {@link flappyGuyMinTop}
+             * @type {number}
+             */
             var flappyGuyMaxTop;
+            /**
+             * Minimum top value {@link flappyGuyElement} can take
+             * @see {@link flappyGuyMaxTop}
+             * @type {number}
+             */
             var flappyGuyMinTop = 0;
 
             /**
              * Variable to indicate if the update loop should increase height
              * instead of decrease it
+             * @type {boolean}
              */
             var flapOne = false;
-
+            /**
+             * Interval ID for gameloop
+             */
             var interval;
 
             /**
@@ -176,6 +217,9 @@
                     });
                 }
 
+                /**
+                 * Generate obstacles
+                 */
                 function generateObstacles() {
                     var obstacleCount = 15;
                     for(var i = 0; i < obstacleCount; i++) {
