--- a/index.html
+++ b/index.html
@@ -3,88 +3,7 @@
     <head>
         <title>Flap</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-        <style>
-            html {
-                margin: 0;
-                padding: 0;
-                width: 100%;
-                height: 100%;
-            }
-            body {
-                width: 100%;
-                height: 100%;
-                margin: 0;
-                padding: 0;
-                background-color: black;
-                position: relative;
-            }
-            .play-ground {
-                background-color: white;
-                overflow: hidden;
-            }
-            @media (min-width: 361px) {
-                .play-ground {
-                    width: 480px;
-                    height: 720px;
-                    position: absolute;
-                    left: 50%;
-                    margin-left: -240px;
-                    top: 50%;
-                    margin-top: -360px;
-                }
-            }
-
-            @media (max-width: 360px) {
-                .play-ground {
-                    position: static;
-                    width: 100%;
-                    height: 100%
-                }
-            }
-
-            .dead {
-                position: absolute;
-                left: 20%;
-                top: 200px;
-                font-family: Arial, SansSerif;
-                font-size: 48px;
-                color: yellow;
-            }
-
-            .hide {
-                display: none;
-            }
-
-            .flappy {
-                position: absolute;
-                width: 32px;
-                height: 32px;
-                background: transparent url(images/flappy_sprite.png) no-repeat 0 0;
-                left: 50%;
-                margin-left: -16px;
-                top: 50%;
-            }
-
-            .play-ground:active .flappy {
-                background-position: 0 -32px;
-            }
-
-            .background {
-                height: 100%;
-                background-color: aqua;
-                width: 5000px;
-                position: relative;
-                /*background-image: url(images/bg.png);*/
-            }
-            .obstacle-top, .obstacle-bottom {
-                position: absolute;
-                background-color: darkgreen;
-                width: 50px;
-            }
-            .obstacle-bottom {
-                bottom: 0;
-            }
-        </style>
+        <link rel="stylesheet" href="css/game.css" type="text/css" />
         <script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
         <script src="js/game.js"></script>
     </head>
