--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <link rel="stylesheet" href="css/game.css" type="text/css" />
         <script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
+        <script src="js/flappyguy.js"></script>
         <script src="js/game.js"></script>
     </head>
     <body>
